<resources>
    <string name="app_name">Adarbakar Zikintsua</string>
    <string name="login_user">Erabiltzailea</string>
    <string name="login_pass">Pasahitza</string>
    <string name="login_conn">KONEKTATU</string>
    <string name="login_noconn">KONEXIO GABE</string>
    <string name="login_BackgroundImg">BackgroundImg</string>
    <string name="login_MenuImg">MenuImg</string>
    <string name="main_BackgroundImg">BackgroundImg</string>
    <string name="main_MenuImg">MenuImg</string>
    <string name="main_jokatu">JOKATU</string>
    <string name="score_BackgroundImg">BackgroundImg</string>
    <string name="score_0">0</string>
    <string name="score_gorde">GORDE</string>
    <string name="score_ezgorde">EZ GORDE</string>
    <string name="score_hscore">Puntuazio onena:</string>
    <string name="score_yscore">Zure puntuak:</string>
</resources>